2008-08-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-pnm.c
	* plug-ins/common/file-ps.c
	* plug-ins/common/file-psp.c: for the most common errors, pass the
	error message with the return values instead of calling
	gimp_message().

2008-08-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-mng.c
	* plug-ins/common/file-pcx.c: for the most common errors,
	pass the error message with the return values instead of calling
	gimp_message().

	* plug-ins/common/file-gif-save.c
	* plug-ins/common/file-pdf.c
	* plug-ins/common/file-png.c: minor cleanup.

2008-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-pdf.c: in case of an error, pass the error
	message with the return values.

2008-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-gif-load.c
	* plug-ins/common/file-gif-save.c: for the most common errors,
	pass the error message with the return values instead of calling
	gimp_message().

	* plug-ins/common/file-png.c: unmarked a string for translation.
	This error condition can't possibly happen.

	* plug-ins/common/file-svg.c: also return an error message when
	the thumbnail can't be loaded.

2008-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-dicom.c: for the most common errors, pass
	the error message with the return values instead of calling
	gimp_message().

2008-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-csource.c: in case of an error, pass the
	error message with the return values.

2008-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/plug-ins/whirlpinch.py: don't hardcode the tile
	size, use gimp.tile_width() instead.

2008-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-desktop-link.c
	* plug-ins/common/file-svg.c: changed to pass error messages with
	the return values instead of calling g_message().

2008-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/frosty-logo.scm
	(apply-frosty-logo-effect): unmarked string for translation.