@@ -185,10 +185,12 @@ static void      run           (const gchar      *name,
                                 gint             *nreturn_vals,
                                 GimpParam       **return_vals);
 
-static gint32    load_image    (const gchar      *filename);
+static gint32    load_image    (const gchar      *filename,
+                                GError          **error);
 static gint      save_image    (const gchar      *filename,
                                 gint32            image_ID,
-                                gint32            drawable_ID);
+                                gint32            drawable_ID,
+                                GError          **error);
 
 static gboolean  save_dialog   (void);
 
@@ -276,12 +278,13 @@ run (const gchar      *name,
      gint             *nreturn_vals,
      GimpParam       **return_vals)
 {
-  static GimpParam  values[2];
-  GimpRunMode       run_mode;
-  GimpPDBStatusType status = GIMP_PDB_SUCCESS;
-  gint32            image_ID;
-  gint32            drawable_ID;
-  GimpExportReturn  export = GIMP_EXPORT_CANCEL;
+  static GimpParam   values[2];
+  GimpRunMode        run_mode;
+  GimpPDBStatusType  status = GIMP_PDB_SUCCESS;
+  gint32             image_ID;
+  gint32             drawable_ID;
+  GimpExportReturn   export = GIMP_EXPORT_CANCEL;
+  GError            *error  = NULL;
 
 #ifdef PROFILE
   struct tms tbuf1, tbuf2;
@@ -303,7 +306,7 @@ run (const gchar      *name,
       times (&tbuf1);
 #endif
 
-      image_ID = load_image (param[1].data.d_string);
+      image_ID = load_image (param[1].data.d_string, &error);
 
       if (image_ID != -1)
         {
@@ -381,7 +384,8 @@ run (const gchar      *name,
 
       if (status == GIMP_PDB_SUCCESS)
         {
-          if (save_image (param[3].data.d_string, image_ID, drawable_ID))
+          if (save_image (param[3].data.d_string, image_ID, drawable_ID,
+                          &error))
             {
               /*  Store psvals data  */
               gimp_set_data (SAVE_PROC, &tsvals, sizeof (tsvals));
@@ -400,6 +404,13 @@ run (const gchar      *name,
       status = GIMP_PDB_CALLING_ERROR;
     }
 
+  if (status != GIMP_PDB_SUCCESS && error)
+    {
+      *nreturn_vals = 2;
+      values[1].type          = GIMP_PDB_STRING;
+      values[1].data.d_string = error->message;
+    }
+
   values[0].data.d_status = status;
 
 #ifdef PROFILE
@@ -411,7 +422,8 @@ run (const gchar      *name,
 }
 
 static gint32
-load_image (const gchar *filename)
+load_image (const gchar  *filename,
+            GError      **error)
 {
   FILE     *fp;
   tga_info  info;
@@ -423,10 +435,12 @@ load_image (const gchar *filename)
   gint32 image_ID = -1;
 
   fp = g_fopen (filename, "rb");
-  if (!fp)
+
+  if (! fp)
     {
-      g_message (_("Could not open '%s' for reading: %s"),
-                 gimp_filename_to_utf8 (filename), g_strerror (errno));
+      g_set_error (error, G_FILE_ERROR, g_file_error_from_errno (errno),
+                   _("Could not open '%s' for reading: %s"),
+                   gimp_filename_to_utf8 (filename), g_strerror (errno));
       return -1;
     }
 
@@ -1120,9 +1134,10 @@ ReadImage (FILE        *fp,
 
 
 static gint
-save_image (const gchar *filename,
-            gint32       image_ID,
-            gint32       drawable_ID)
+save_image (const gchar  *filename,
+            gint32        image_ID,
+            gint32        drawable_ID,
+            GError      **error)
 {
   GimpPixelRgn   pixel_rgn;
   GimpDrawable  *drawable;
@@ -1151,8 +1166,9 @@ save_image (const gchar *filename,
 
   if ((fp = g_fopen (filename, "wb")) == NULL)
     {
-      g_message (_("Could not open '%s' for writing: %s"),
-                 gimp_filename_to_utf8 (filename), g_strerror (errno));
+      g_set_error (error, G_FILE_ERROR, g_file_error_from_errno (errno),
+                   _("Could not open '%s' for writing: %s"),
+                   gimp_filename_to_utf8 (filename), g_strerror (errno));
       return FALSE;
     }
 
