@@ -1,5 +1,13 @@
 2008-08-18  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/file-raw.c
+	* plug-ins/common/file-tga.c
+	* plug-ins/common/file-tiff-load.c
+	* plug-ins/common/file-tiff-save.c: pass error messages with the
+	return values instead of calling gimp_message().
+
+2008-08-18  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/file-pnm.c
 	* plug-ins/common/file-ps.c
 	* plug-ins/common/file-psp.c: for the most common errors, pass the
